# Advanced-Programming

./: README.md
Convex-Hull/: CMakeLists.txt  README.md  graph.py
Convex-Hull/.cache/clangd/index/: engine.cpp.C68AB9978035E104.idx  glad.c.72FFA2AFAB10E5CA.idx  main.cpp.CDCDC902B259D32C.idx  shader.cpp.68B4DB7D90342670.idx  window.cpp.2D87AD1D2FBBE767.idx
Convex-Hull/src/: main.cpp
Engine/: .gitignore  CMakeLists.txt  README.md
Engine/assets/shaders/: Line.frag  Line.vert  Point.frag  Point.vert  Poly.frag  Poly.vert  cube.frag  grid.frag  grid.vert  instanced_cube.vert  plane.frag
Engine/include/: engine.hpp  object.hpp  shader.hpp  window.hpp
Engine/include/Components/: Component.hpp  Transform.hpp
Engine/include/Math/: Matrix.hpp  Vector.hpp
Engine/include/Objects/: ObjectData.hpp  ObjectManager.hpp  ObjectUUID.hpp
Engine/include/Solvers/: Instanced.hpp
Engine/include/Utils/: fixed_string.hpp
Engine/include/Wrappers/: Line.hpp  Point.hpp  Poly.hpp
Engine/lib/: engine.cpp  shader.cpp  window.cpp
Engine/src/: engine.cpp  main.cpp  window.cpp
Minkowski-Sum/: README.md  graph.py
Minkowski-Sum/src/: main.cpp
Navegation/: CMakeLists.txt  README.md  collect.sh
Navegation (Factory)/include/Grid/: Manager.hpp  SquareGrid.hpp
Navegation (Factory)/src/: main.cpp
Navegation (Factory)/src/Cells/: Factory.cpp  PathOrigin.cpp
Navegation (Factory)/src/Grid/: SquareGrid.cpp
Navegation (Singleton,Adapter,Decorator)/: CMakeLists.txt
Navegation (Singleton,Adapter,Decorator)/include/Cells/: Obstacle.hpp
Navegation (Singleton,Adapter,Decorator)/include/Grid/: Grid.hpp
Navegation (Singleton,Adapter,Decorator)/include/Path/: SquareGridAdapter.hpp
Navegation (Singleton,Adapter,Decorator)/src/Cells/: Factory.cpp  Obstacle.cpp
Navegation (Singleton,Adapter,Decorator)/src/Grid/: Manager.cpp
Navegation (Singleton,Adapter,Decorator)/src/Path/: Dijkstra.cpp  SquareGridAdapter.cpp
Navegation-Chain-Command-Observer/: CMakeLists.txt
Navegation-Chain-Command-Observer/include/Actions/: AddCell.hpp  Invoker.hpp  RemoveCell.hpp
Navegation-Chain-Command-Observer/include/Chain/: GridConfig.hpp  GridFactory.hpp  GridManager.hpp  Handler.hpp
Navegation-Chain-Command-Observer/include/Grid/: Graph.hpp  Grid.hpp  Manager.hpp
Navegation-Chain-Command-Observer/include/Grid/Factories/: Square.hpp
Navegation-Chain-Command-Observer/include/Observer/: GridChanged.hpp  Publisher.hpp  Subject.hpp
Navegation-Chain-Command-Observer/src/: main.cpp
Navegation-Chain-Command-Observer/src/Actions/: Invoker.cpp  RemoveCell.cpp
Navegation-Chain-Command-Observer/src/Cells/: Factory.cpp
Navegation-Chain-Command-Observer/src/Chain/: GridConfig.cpp  GridFactory.cpp  GridManager.cpp  Handler.cpp
Navegation-Chain-Command-Observer/src/Grid/: Grid.cpp  Manager.cpp
Navegation-Chain-Command-Observer/src/Observer/: GridChanged.cpp  Publisher.cpp
Navegation-Chain-Command-Observer/src/Path/: Dijkstra.cpp
Navegation-Collision/: CMakeLists.txt  README.md  project_context.txt
Navegation-Collision-II/: .clang-uml  .gitignore  CMakeLists.txt  README.md
Navegation-Collision-II/diagrams/: my_class_diagram.mmd  my_class_diagram.puml
Navegation-Collision-II/docs/diagrams/: architecture_overview.puml  class_structure.puml  full_codebase_overview.puml
Navegation-Collision-II/include/: Tracy.hpp
Navegation-Collision-II/include/Actions/: AddCell.hpp  Command.hpp  Invoker.hpp  MoveAgent.hpp  RemoveCell.hpp
Navegation-Collision-II/include/Cells/: Cell.hpp  Factory.hpp  Obstacle.hpp  PathOrigin.hpp
Navegation-Collision-II/include/Cells/Decorators/: CellDecorator.hpp  PulsingEffect.hpp
Navegation-Collision-II/include/Chain/: Handler.hpp
Navegation-Collision-II/include/Chain/GridInit/: Config.hpp  Factory.hpp  Manager.hpp
Navegation-Collision-II/include/Grid/: Grid.hpp  HexagonalGrid.hpp  Manager.hpp  SquareGrid.hpp
Navegation-Collision-II/include/Observer/: Subject.hpp  Subscriber.hpp
Navegation-Collision-II/include/Path/: Dijkstra.hpp  Manager.hpp
Navegation-Collision-II/include/Simulation/: Agent.hpp  Manager.hpp
Navegation-Collision-II/include/Simulation/Collision/: DirectStrategy.hpp  GridStrategy.hpp  IStrategy.hpp  ISystem.hpp  RvoStrategy.hpp
Navegation-Collision-II/include/Simulation/Collision/Factory/: Direct.hpp  Grid.hpp  IAbstract.hpp  Rvo.hpp
Navegation-Collision-II/src/: main.cpp
Navegation-Collision-II/src/Actions/: AddCell.cpp  Invoker.cpp  MoveAgent.cpp  RemoveCell.cpp
Navegation-Collision-II/src/Animation/: Manager.hpp
Navegation-Collision-II/src/Cells/: Factory.cpp  Obstacle.cpp  PathOrigin.cpp
Navegation-Collision-II/src/Chain/GridInit/: Config.cpp  Factory.cpp
Navegation-Collision-II/src/Grid/: Grid.cpp  HexagonalGrid.cpp  Manager.cpp  SquareGrid.cpp
Navegation-Collision-II/src/Grid/Factories/: Hexagonal.cpp  Square.cpp
Navegation-Collision-II/src/Observer/: GridChanged.cpp
Navegation-Collision-II/src/Path/: Dijkstra.cpp  Manager.cpp
Navegation-Collision-II/src/Simulation/: Agent.cpp  Manager.cpp
Navegation-Collision-II/src/Simulation/Collision/: DirectStrategy.cpp  GridStrategy.cpp  RvoStrategy.cpp
Navegation-Collision-II/src/Simulation/Collision/Factory/: Direct.cpp  Grid.cpp  Rvo.cpp
Navegation-Collision/include/Actions/: AddCell.hpp  Command.hpp  Invoker.hpp  MoveCell.hpp  RemoveCell.hpp
Navegation-Collision/include/Cells/: Cell.hpp  PathOrigin.hpp
Navegation-Collision/include/Grid/: Grid.hpp  Manager.hpp
Navegation-Collision/include/Observer/: GridChanged.hpp  Subscriber.hpp
Navegation-Collision/include/Path/: Dijkstra.hpp  Manager.hpp
Navegation-Collision/src/: main.cpp
Navegation-Factory-AbstractFactory/: README.md
Navegation-Factory-AbstractFactory/include/: Dijkstra.hpp
Navegation-Factory-AbstractFactory/src/: Dijkstra.cpp
Navegation-Singleton-Adapter-Decorator/: .gitignore  graph.py
Navegation-Singleton-Adapter-Decorator/src/: main.cpp
Navegation/src/: main.cpp
Voronoi-Diagram/: .gitignore  CMakeLists.txt  README.md
Voronoi-Diagram/src/: main.cpp
(+49 files in other folders)
